Fix off center and inaccurate bounding box locations

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ align-items: center;
   margin: auto;
   border: 20px solid #eaf0f6;
   border-radius: 50%;
-  border-top: 20px solid #ff7a59;
+  border-top: 20px solid #ff7800;
   width: 200px;
   height: 200px;
   animation: spinner 4s linear infinite;
